--- a/entrata/test-output/old/Default suite/classes.html
+++ b/entrata/test-output/old/Default suite/classes.html
@@ -11,11 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>displ</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>solutionslinksworking</td>
+<td>verifyLogo</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
