--- a/entrata/test-output/old/Default suite/methods.html
+++ b/entrata/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9daf9d">  <td>24/02/07 02:43:23</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.loadcofig()[pri:0, instance:entrata.homepagetest@1d9b7cce]">&gt;&gt;loadcofig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1226020905</td>   <td></td> </tr>
-<tr bgcolor="d3a4e9">  <td>24/02/07 02:43:23</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;homepagetest.setup()[pri:0, instance:entrata.homepagetest@1d9b7cce]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1226020905</td>   <td></td> </tr>
-<tr bgcolor="d3a4e9">  <td>24/02/07 02:43:32</td>   <td>9265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="homepagetest.verifyLogo()[pri:0, instance:entrata.homepagetest@1d9b7cce]">verifyLogo</td> 
-  <td>main@1226020905</td>   <td></td> </tr>
-<tr bgcolor="d3a4e9">  <td>24/02/07 02:43:32</td>   <td>9347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;homepagetest.teardown()[pri:0, instance:entrata.homepagetest@1d9b7cce]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1226020905</td>   <td></td> </tr>
+<tr bgcolor="9daf9d">  <td>24/02/07 02:59:49</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.loadcofig()[pri:0, instance:entrata.residentaltest@42e99e4a]">&gt;&gt;loadcofig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1617550160</td>   <td></td> </tr>
+<tr bgcolor="d3a4e9">  <td>24/02/07 02:59:49</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;residentaltest.setup()[pri:0, instance:entrata.residentaltest@42e99e4a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1617550160</td>   <td></td> </tr>
+<tr bgcolor="d3a4e9">  <td>24/02/07 02:59:55</td>   <td>6375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="residentaltest.pageurlresi()[pri:0, instance:entrata.residentaltest@42e99e4a]">pageurlresi</td> 
+  <td>main@1617550160</td>   <td></td> </tr>
+<tr bgcolor="d3a4e9">  <td>24/02/07 03:00:21</td>   <td>32684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;residentaltest.teardown()[pri:0, instance:entrata.residentaltest@42e99e4a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1617550160</td>   <td></td> </tr>
 </table>
