--- a/entrata/test-output/old/Suite/methods-not-run.html
+++ b/entrata/test-output/old/Suite/methods-not-run.html
@@ -1,3 +1,5 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>entrata.base.BaseClass.loadcofig</td></tr>
+<tr><td>entrata.base.BaseClass.loadcofig</td></tr>
+<tr><td>entrata.base.BaseClass.loadcofig</td></tr>
 </table>
