--- a/entrata/test-output/old/Suite/methods.html
+++ b/entrata/test-output/old/Suite/methods.html
@@ -1,20 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="94c28c">  <td>24/02/06 23:42:18</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.loadcofig()[pri:0, instance:entrata.homepagetest@62150f9e]">&gt;&gt;loadcofig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1740797075</td>   <td></td> </tr>
-<tr bgcolor="d3a4e9">  <td>24/02/06 23:42:18</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;homepagetest.setup()[pri:0, instance:entrata.homepagetest@62150f9e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1740797075</td>   <td></td> </tr>
-<tr bgcolor="d3a4e9">  <td>24/02/06 23:42:25</td>   <td>6928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="homepagetest.verifyLogo()[pri:0, instance:entrata.homepagetest@62150f9e]">verifyLogo</td> 
-  <td>main@1740797075</td>   <td></td> </tr>
-<tr bgcolor="d3a4e9">  <td>24/02/06 23:42:32</td>   <td>13372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;homepagetest.teardown()[pri:0, instance:entrata.homepagetest@62150f9e]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1740797075</td>   <td></td> </tr>
-<tr bgcolor="a6bb77">  <td>24/02/06 23:42:33</td>   <td>14270</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;demotest.setup()[pri:0, instance:entrata.demotest@1a451d4d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1740797075</td>   <td></td> </tr>
-<tr bgcolor="a6bb77">  <td>24/02/06 23:42:44</td>   <td>25969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="demotest.demotesttitle()[pri:0, instance:entrata.demotest@1a451d4d]">demotesttitle</td> 
-  <td>main@1740797075</td>   <td></td> </tr>
-<tr bgcolor="a6bb77">  <td>24/02/06 23:42:50</td>   <td>31604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="demotest.displaybutonwatchdemo()[pri:0, instance:entrata.demotest@1a451d4d]">displaybutonwatchdemo</td> 
-  <td>main@1740797075</td>   <td></td> </tr>
-<tr bgcolor="a6bb77">  <td>24/02/06 23:43:20</td>   <td>61836</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;demotest.teardown()[pri:0, instance:entrata.demotest@1a451d4d]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1740797075</td>   <td></td> </tr>
+<tr bgcolor="eca565">  <td>24/02/07 02:54:59</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.loadcofig()[pri:0, instance:entrata.homepagetest@71809907]">&gt;&gt;loadcofig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@319644606</td>   <td></td> </tr>
+<tr bgcolor="d3a4e9">  <td>24/02/07 02:54:59</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;homepagetest.setup()[pri:0, instance:entrata.homepagetest@71809907]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@319644606</td>   <td></td> </tr>
+<tr bgcolor="d3a4e9">  <td>24/02/07 02:55:11</td>   <td>12385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="homepagetest.verifyLogo()[pri:0, instance:entrata.homepagetest@71809907]">verifyLogo</td> 
+  <td>main@319644606</td>   <td></td> </tr>
+<tr bgcolor="d3a4e9">  <td>24/02/07 02:55:11</td>   <td>12514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;homepagetest.teardown()[pri:0, instance:entrata.homepagetest@71809907]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@319644606</td>   <td></td> </tr>
+<tr bgcolor="a6bb77">  <td>24/02/07 02:55:13</td>   <td>14441</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;demotest.setup()[pri:0, instance:entrata.demotest@3ce1e309]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@319644606</td>   <td></td> </tr>
+<tr bgcolor="a6bb77">  <td>24/02/07 02:55:25</td>   <td>26577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="demotest.demotesttitle()[pri:0, instance:entrata.demotest@3ce1e309]">demotesttitle</td> 
+  <td>main@319644606</td>   <td></td> </tr>
+<tr bgcolor="a6bb77">  <td>24/02/07 02:55:37</td>   <td>38226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="demotest.displaybutonwatchdemo()[pri:0, instance:entrata.demotest@3ce1e309]">displaybutonwatchdemo</td> 
+  <td>main@319644606</td>   <td></td> </tr>
+<tr bgcolor="a6bb77">  <td>24/02/07 02:56:07</td>   <td>68425</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;demotest.teardown()[pri:0, instance:entrata.demotest@3ce1e309]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@319644606</td>   <td></td> </tr>
+<tr bgcolor="d0fbae">  <td>24/02/07 02:56:08</td>   <td>69417</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignInTest.setup()[pri:0, instance:entrata.SignInTest@6aba2b86]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@319644606</td>   <td></td> </tr>
+<tr bgcolor="d0fbae">  <td>24/02/07 02:56:20</td>   <td>80939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTest.propertybuttontest()[pri:0, instance:entrata.SignInTest@6aba2b86]">propertybuttontest</td> 
+  <td>main@319644606</td>   <td></td> </tr>
+<tr bgcolor="d0fbae">  <td>24/02/07 02:56:28</td>   <td>89360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTest.residentbuttontest()[pri:0, instance:entrata.SignInTest@6aba2b86]">residentbuttontest</td> 
+  <td>main@319644606</td>   <td></td> </tr>
+<tr bgcolor="d0fbae">  <td>24/02/07 02:56:58</td>   <td>119509</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignInTest.teardown()[pri:0, instance:entrata.SignInTest@6aba2b86]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@319644606</td>   <td></td> </tr>
+<tr bgcolor="8bf671">  <td>24/02/07 02:57:00</td>   <td>120914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;residentaltest.setup()[pri:0, instance:entrata.residentaltest@158da8e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@319644606</td>   <td></td> </tr>
+<tr bgcolor="8bf671">  <td>24/02/07 02:57:05</td>   <td>126371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="residentaltest.pageurlresi()[pri:0, instance:entrata.residentaltest@158da8e]">pageurlresi</td> 
+  <td>main@319644606</td>   <td></td> </tr>
+<tr bgcolor="8bf671">  <td>24/02/07 02:58:02</td>   <td>183115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;residentaltest.teardown()[pri:0, instance:entrata.residentaltest@158da8e]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@319644606</td>   <td></td> </tr>
 </table>
